--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,161 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.bg-clr{
+  background-color: #d1d3e2;
+  width: 40%;
+  height: 55%;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .divider:after,
+  .divider:before {
+    content: "";
+    flex: 1;
+    height: 1px;
+    background: #eee;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .back {
+    /* fallback for old browsers */
+    background: #6a11cb;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
   }
-}
+  .text-areas{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin : 12px;
+  }
+  
+  footer {
+
+    padding: 17px;
+    font-size: larger;
+    font-weight: bolder;
+    width: 100%;
+    background: #f0dd37;
+  }
+  
+  /* Sidebar start*/
+  
+  .sid-container {
+    display: flex;
+    /* background-color: aquamarine; */
+  }
+  
+  .container {
+    display: flex;
+  
+  }
+  
+  main {
+    width: 100%;
+  
+  }
+  
+  .sidebar {
+    background: #f0dd37;
+    color: #fff;
+    height: auto;
+    width: 20%;
+    transition: all 0.5s;
+  }
+  
+  .top_section {
+    display: flex;
+    align-items: center;
+    padding: 20px 15px;
+  }
+  
+  .logo {
+    font-size: 30px;
+  }
+  
+  .bars {
+    display: flex;
+    font-size: 25px;
+    margin-left: 50px;
+  }
+  
+  .link {
+    display: flex;
+    color: #fff;
+    padding: 10px 15px;
+    gap: 15px;
+    transition: all 0.5s;
+  }
+  
+  .link:hover {
+    background: lightskyblue;
+    color: #000;
+    transition: all 0.5s;
+  }
+  
+  .active {
+    background: lightskyblue;
+    color: #000;
+  }
+  
+  .icon,
+  .link_text {
+    font-size: 20px;
+  }
+  
+  .text-deactron {
+    text-decoration: none;
+  }
+  
+  .redius {
+    border-radius: 50%;
+  }
+  
+  .nav-clr {
+    background: #f0dd37;
+    color: #ccc;
+  }
+  .nav-btn-clr{
+    color: #fff;
+    background-color: #cac2d1;
+  }
+  
+  /* Day-month container */
+  .date-month{
+    color: beige;
+    background-color: chocolate;
+    border: 2px solid blue;
+    border-radius: 10px;
+  }
+  
+  /* logoutage */
+  .navbar {
+    width: 100%;
+    height: 70px;
+    background-color: #3bb19b;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .navbar h1 {
+    color: white;
+    font-size: 25px;
+    margin-left: 20px;
+  }
+  
+  .white_btn {
+    border: none;
+    outline: none;
+    padding: 12px 0;
+    background-color: white;
+    border-radius: 20px;
+    width: 120px;
+    font-weight: bold;
+    font-size: 14px;
+    cursor: pointer;
+    margin-right: 20px;
+  }
